Corrected a lot of the columns and spacing. Lagre changes to index, protfolio and contact.html

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,7 @@
 .footerh {
     height: 60px;
 }
+
+body {
+    background-image: url("dust_scratches.png");
+}
